fix header on safari

--- a/src/scss/frontend/_templates.scss
+++ b/src/scss/frontend/_templates.scss
@@ -13,7 +13,6 @@
   right           : 0;
   background-color: var(--color-white-60);
   backdrop-filter : blur(4px);
-  transform       : translateY(var(--top));
 
   &__logo {
     min-width: 150px;
@@ -31,6 +30,10 @@
   &__content {
     top  : 80px;
     right: 0;
+  }
+
+  @media(min-width: $md) {
+    transform       : translateY(var(--top));
   }
 
   @media(max-width: $md) {
